# xai-aws

./: README.md  aws_components.py  bedrock_components.py  pyproject.toml
