[project]
name = "xai-aws"
version = "0.1.0"
description = "AWS Components for Xircuits"
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "git@github.com:XpressAI/xai-aws.git"
keywords = ["xircuits", "aws", "s3", "sqs", "dynamodb"]

dependencies = [
    "boto3==1.36.10",
]

# Xircuits-specific configurations
[tool.xircuits]
requirements_path = "requirements.txt"
